tests/snapshots/run_wpt_conformance__trtx_argMax_float32_4D_tensor__axis_3__options_keepDimensions_true.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, err)"
---
(
    "arg_min_max.https.any.js",
    "argMax float32 4D tensor, axis=3, options.keepDimensions=true",
    "trtx",
    Failed {
        msg: Some(
            "arg_min_max :: argMax float32 4D tensor, axis=3, options.keepDimensions=true: index 0: actual=1073741824 expected=2 tolerance=0\n  inputs: argMaxInput: [-51.09362030029297, -6.53970193862915, 73.8133773803711, 88.46114349365234, -5.294266700744629, -79.20668029785156, -41.70176696777344, 73.8133773803711, 88.46114349365234, -84.94000244140625, -61.48894119262695, -98.3387451171875, -51.09362030029297, -6.53970193862915, 73.8133773803711, 88.46114349365234, -5.294266700744629, -79.20668029785156, -41.70176696777344, 73.8133773803711, 88.46114349365234, -84.94000244140625, -61.48894119262695, -98.3387451171875]\n  expected argMaxOutput: [2, 0, 2, 1, 2, 0, 2, 1]\n  actual argMaxOutput: [1073741824, 0, 1073741824, 1065353216, 1073741824, 0, 1073741824, 1065353216]\n  expected argMaxOutput full nd:\n(shape [2, 1, 4, 1])\n  [2] [0] [2] [1]\n  [2] [0] [2] [1]\n  actual argMaxOutput full nd:\n(shape [2, 1, 4, 1])\n  [1073741824] [0] [1073741824] [1065353216]\n  [1073741824] [0] [1073741824] [1065353216]\n\n--- built graph ---\nwebnn_graph \"graph\" v2 {\n  inputs {\n    argMaxInput: f32[2, 1, 4, 3];\n  }\n\n  nodes {\n    [argMaxOutput] = argMax(argMaxInput, keepDimensions=true, label=\"\", outputDataType=\"int32\");\n  }\n\n  outputs { argMaxOutput; }\n}\n",
        ),
    },
)
